<resources>
    <string name="app_name">Tour and Travel</string>

    //login page strings
    <string name="user_login">User Login</string>
    <string name="driver_login">User Login</string>
    <string name="tour_guide_login">User Login</string>

    //strings for choose role page
    <string name="choose_role">Choose Your Role</string>
    <string name="role_Statement">Select how you want to continue</string>
    <string name="role_1">Customer</string>
    <string name="role_2">Driver</string>
    <string name="role_3">Tour Guide</string>

    //common login or registration page strings.
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="go_to_login">already have an account?</string>
    <string name="go_to_register">do not have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    //home page strings
    <string name="popular">Popular</string>
    <string name="place_name">Place Name</string>
    <string name="duration">Duration</string>
    <string name="rating">Rating</string>
    <string name="day">days</string>
    <string name="recent">Recent</string>
    <string name="popular_item_recycler_view">Popular Item Recycler View</string>
    <string name="recent_item_recycler_view">Recent Item Recycler View</string>


    //map page strings
    <string name="map_description">Map to track the location of driver and tour guide</string>
    <string name="event">Events</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="phone_number">phone number</string>
    <string name="address">address</string>
    <string name="search">search</string>
    <string name="price">price</string>
    <string name="tour_name">tour name</string>
    <string name="home">Home</string>
    <string name="tour_and_travel_registered_driver">Tour and Travel Registered Driver</string>
    <string name="schedule">Schedule</string>
    <string name="profile">Profile</string>
    <string name="gender">Gender</string>
    <string name="phone_number_10_digits">Phone Number (10 digits)</string>
    <string name="email_address">Email Address</string>
    <string name="full_name">Full Name</string>
    <string name="join_tripora_to_start_exploring">Join Tripora to start exploring</string>
    <string name="create_account">Create Account</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="book_now">Book Now</string>
    <string name="status">Status ::</string>
    <string name="rupee">₹</string>
    <string name="active">active</string>
    <string name="days">Days</string>
    <string name="night">Night</string>
    <string name="remainging_seats">Remainging Seats</string>
    <string name="description">Description</string>
    <string name="details">details</string>
    <string name="destination">Destination</string>
    <string name="destination_name">Destination Name</string>
    <string name="tour_guide">Tour Guide</string>
    <string name="guide_name">guide name</string>
    <string name="edit_info">Edit Info</string>
    <string name="logout">Logout</string>
    <string name="select_start_date">Select start date</string>
    <string name="start_date">Start Date</string>
    <string name="fill_in_the_details_to_submit_your_leave_request">Fill in the details to submit your leave request.</string>
    <string name="apply_for_leave">Apply for Leave</string>
    <string name="leave">Leave</string>

</resources>